--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@types/mysql": "^2.15.0",
     "@types/node": "^8.0.47",
     "@types/on-finished": "^2.3.1",
+    "@types/shuffle-array": "^0.0.28",
     "@types/supertest": "^2.0.3",
     "@types/uuid": "^3.4.3",
     "@types/winston": "^2.3.7",
@@ -46,6 +47,7 @@
     "express": "^4.16.2",
     "mysql": "^2.15.0",
     "on-finished": "^2.3.0",
+    "shuffle-array": "^1.0.1",
     "sql-client": "^1.3.0",
     "uuid": "^3.1.0",
     "winston": "^2.4.0"
