--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@google-cloud/functions-emulator": "^1.0.0-alpha.25",
     "@types/bcrypt": "^1.0.0",
     "@types/chai": "^4.0.4",
+    "@types/chai-subset": "^1.3.1",
     "@types/express": "^4.0.39",
     "@types/mocha": "^2.2.44",
     "@types/mysql": "^2.15.0",
@@ -30,6 +31,7 @@
     "@types/uuid": "^3.4.3",
     "@types/winston": "^2.3.7",
     "chai": "^4.1.2",
+    "chai-subset": "^1.6.0",
     "copyfiles": "^1.2.0",
     "mocha": "^4.0.1",
     "mocha-typescript": "^1.1.12",
