--- a/package.json
+++ b/package.json
@@ -8,11 +8,10 @@
   "scripts": {
     "clean": "rimraf \"dist/*\"",
     "build": "tsc",
-    "copy-package": "copyfiles package.json dist",
-    "deploy-script": "./deploy.sh",
-    "deploy-local-script": "./deploy-local.sh",
-    "deploy-local": "run-s clean build copy-package deploy-local-script",
-    "deploy": "run-s clean build copy-package deploy-script",
+    "copy-package": "copyfiles package.json yarn.lock dist",
+    "firebase-deploy": "firebase deploy --only functions",
+    "install-deps": "yarn install --production=true --cwd dist",
+    "deploy": "run-s clean build copy-package install-deps firebase-deploy",
     "pretest": "run-s clean build",
     "test": "nyc mocha"
   },
@@ -21,6 +20,7 @@
     "@types/bcrypt": "^1.0.0",
     "@types/chai": "^4.0.4",
     "@types/chai-subset": "^1.3.1",
+    "@types/cors": "^2.8.1",
     "@types/express": "^4.0.39",
     "@types/mocha": "^2.2.44",
     "@types/mysql": "^2.15.0",
@@ -33,24 +33,28 @@
     "chai": "^4.1.2",
     "chai-subset": "^1.6.0",
     "copyfiles": "^1.2.0",
+    "firebase-admin": "^5.4.3",
+    "firebase-tools": "^3.14.0",
     "mocha": "^4.0.1",
     "mocha-typescript": "^1.1.12",
     "npm-run-all": "^4.1.1",
     "nyc": "^11.2.1",
     "rimraf": "^2.6.2",
     "source-map-support": "^0.5.0",
-    "sqlite3": "^3.1.13",
     "supertest": "^3.0.0",
     "tslint": "^5.8.0",
     "typescript": "^2.5.3"
   },
   "dependencies": {
+    "@google-cloud/logging-winston": "^0.7.0",
     "bcrypt": "^1.0.3",
+    "cors": "^2.8.4",
     "express": "^4.16.2",
+    "firebase-admin": "^5.4.3",
+    "firebase-functions": "^0.7.2",
     "mysql": "^2.15.0",
     "on-finished": "^2.3.0",
     "shuffle-array": "^1.0.1",
-    "sql-client": "^1.3.0",
     "uuid": "^3.1.0",
     "winston": "^2.4.0"
   },
