Add canary project

--- a/.firebaserc
+++ b/.firebaserc
@@ -1,5 +1,6 @@
 {
   "projects": {
-    "default": "custom-router-762"
+    "default": "custom-router-762",
+    "canary": "pifuxelck-canary"
   }
 }
