Restructure project in prep for web code
Model types have been pulled into a common models directory, while all
other code has been shoved down into a server specific directory.

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "pifuxelck-server-node",
   "version": "1.0.0",
-  "main": "src/index.js",
+  "main": "src/server/index.js",
   "repository": "https://github.com/fimad/pifuxelck-server-node",
   "author": "Will Coster <willcoster@gmail.com>",
   "license": "MIT",
