--- a/package.json
+++ b/package.json
@@ -22,14 +22,21 @@
     "@types/chai-subset": "^1.3.1",
     "@types/cors": "^2.8.1",
     "@types/express": "^4.0.39",
+    "@types/history": "^4.6.1",
     "@types/mocha": "^2.2.44",
     "@types/mysql": "^2.15.0",
     "@types/node": "^8.0.47",
     "@types/on-finished": "^2.3.1",
+    "@types/react": "^16.0.20",
+    "@types/react-dom": "^16.0.2",
+    "@types/react-redux": "^5.0.12",
+    "@types/react-router": "^4.0.16",
+    "@types/redux": "^3.6.0",
     "@types/shuffle-array": "^0.0.28",
     "@types/supertest": "^2.0.3",
     "@types/uuid": "^3.4.3",
     "@types/winston": "^2.3.7",
+    "awesome-typescript-loader": "^3.3.0",
     "chai": "^4.1.2",
     "chai-subset": "^1.6.0",
     "copyfiles": "^1.2.0",
@@ -40,10 +47,13 @@
     "npm-run-all": "^4.1.1",
     "nyc": "^11.2.1",
     "rimraf": "^2.6.2",
+    "source-map-loader": "^0.2.3",
     "source-map-support": "^0.5.0",
     "supertest": "^3.0.0",
     "tslint": "^5.8.0",
-    "typescript": "^2.5.3"
+    "typescript": "^2.5.3",
+    "webpack": "^3.8.1",
+    "webpack-dev-server": "^2.9.4"
   },
   "dependencies": {
     "@google-cloud/logging-winston": "^0.7.0",
@@ -52,8 +62,15 @@
     "express": "^4.16.2",
     "firebase-admin": "^5.4.3",
     "firebase-functions": "^0.7.2",
+    "history": "^4.7.2",
     "mysql": "^2.15.0",
     "on-finished": "^2.3.0",
+    "react": "^16.0.0",
+    "react-dom": "^16.0.0",
+    "react-redux": "^5.0.6",
+    "react-router": "^4.2.0",
+    "react-router-redux": "^5.0.0-alpha.8",
+    "redux": "^3.7.2",
     "shuffle-array": "^1.0.1",
     "uuid": "^3.1.0",
     "winston": "^2.4.0"
