--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,7 +5,8 @@
         "noImplicitAny": true,
         "module": "commonjs",
         "lib": ["es2015", "es2017", "dom"],
-        "target": "es5"
+        "target": "es5",
+        "jsx": "react"
     },
     "include": [
         "./src/**/*",
