--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@types/cors": "^2.8.1",
     "@types/express": "^4.0.39",
     "@types/history": "^4.6.1",
+    "@types/material-ui": "^0.18.3",
     "@types/mocha": "^2.2.44",
     "@types/mysql": "^2.15.0",
     "@types/node": "^8.0.47",
@@ -32,6 +33,9 @@
     "@types/react-redux": "^5.0.12",
     "@types/react-router": "^4.0.16",
     "@types/redux": "^3.6.0",
+    "@types/redux-logger": "^3.0.5",
+    "@types/redux-storage": "^4.0.10",
+    "@types/redux-thunk": "^2.1.0",
     "@types/shuffle-array": "^0.0.28",
     "@types/supertest": "^2.0.3",
     "@types/uuid": "^3.4.3",
@@ -63,6 +67,7 @@
     "firebase-admin": "^5.4.3",
     "firebase-functions": "^0.7.2",
     "history": "^4.7.2",
+    "material-ui": "^0.19.4",
     "mysql": "^2.15.0",
     "on-finished": "^2.3.0",
     "react": "^16.0.0",
@@ -71,6 +76,10 @@
     "react-router": "^4.2.0",
     "react-router-redux": "^5.0.0-alpha.8",
     "redux": "^3.7.2",
+    "redux-logger": "^3.0.6",
+    "redux-storage": "^4.1.2",
+    "redux-storage-engine-indexed-db": "^0.0.4",
+    "redux-thunk": "^2.2.0",
     "shuffle-array": "^1.0.1",
     "uuid": "^3.1.0",
     "winston": "^2.4.0"
