--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@types/react-dom": "^16.0.2",
     "@types/react-redux": "^5.0.12",
     "@types/react-router": "^4.0.16",
+    "@types/react-router-dom": "^4.2.0",
     "@types/redux": "^3.6.0",
     "@types/redux-logger": "^3.0.5",
     "@types/redux-storage": "^4.0.10",
@@ -74,6 +75,7 @@
     "react-dom": "^16.0.0",
     "react-redux": "^5.0.6",
     "react-router": "^4.2.0",
+    "react-router-dom": "^4.2.2",
     "react-router-redux": "^5.0.0-alpha.8",
     "redux": "^3.7.2",
     "redux-logger": "^3.0.6",
