--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@types/react": "^16.0.20",
     "@types/react-dom": "^16.0.2",
     "@types/react-redux": "^5.0.12",
+    "@types/react-responsive": "^3.0.0",
     "@types/react-router": "^4.0.16",
     "@types/react-router-dom": "^4.2.0",
     "@types/redux": "^3.6.0",
@@ -74,6 +75,7 @@
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
     "react-redux": "^5.0.6",
+    "react-responsive": "^3.0.0",
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
     "react-router-redux": "^5.0.0-alpha.8",
