Migrate to material-ui-next

--- a/package.json
+++ b/package.json
@@ -23,7 +23,6 @@
     "@types/cors": "^2.8.1",
     "@types/express": "^4.0.39",
     "@types/history": "^4.6.1",
-    "@types/material-ui": "^0.18.3",
     "@types/mocha": "^2.2.44",
     "@types/mysql": "^2.15.0",
     "@types/node": "^8.0.47",
@@ -69,7 +68,8 @@
     "firebase-admin": "^5.4.3",
     "firebase-functions": "^0.7.2",
     "history": "^4.7.2",
-    "material-ui": "^0.19.4",
+    "material-ui": "^1.0.0-beta.20",
+    "material-ui-icons": "^1.0.0-beta.17",
     "mysql": "^2.15.0",
     "on-finished": "^2.3.0",
     "react": "^16.0.0",
