--- a/package.json
+++ b/package.json
@@ -79,6 +79,7 @@
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
     "react-router-redux": "^5.0.0-alpha.8",
+    "react-visibility-sensor": "^3.11.0",
     "redux": "^3.7.2",
     "redux-logger": "^3.0.6",
     "redux-storage": "^4.1.2",
