Store history in a second IDB instance
This instance is hit when loading from history which happens much less
frequently that redux storage operations.

--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "firebase-admin": "^5.4.3",
     "firebase-functions": "^0.7.2",
     "history": "^4.7.2",
+    "idb-keyval": "^2.3.0",
     "material-ui": "^1.0.0-beta.20",
     "material-ui-icons": "^1.0.0-beta.17",
     "mysql": "^2.15.0",
