--- a/package.json
+++ b/package.json
@@ -84,6 +84,7 @@
     "redux": "^3.7.2",
     "redux-logger": "^3.0.6",
     "redux-storage": "^4.1.2",
+    "redux-storage-decorator-debounce": "^1.1.3",
     "redux-storage-decorator-filter": "^1.1.8",
     "redux-storage-decorator-migrate": "^1.1.0",
     "redux-storage-engine-indexed-db": "^0.0.4",
