--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@types/bcrypt": "^1.0.0",
     "@types/chai": "^4.0.4",
     "@types/chai-subset": "^1.3.1",
+    "@types/classnames": "^2.2.3",
     "@types/cors": "^2.8.1",
     "@types/express": "^4.0.39",
     "@types/history": "^4.6.1",
@@ -45,24 +46,32 @@
     "chai": "^4.1.2",
     "chai-subset": "^1.6.0",
     "copyfiles": "^1.2.0",
+    "css-loader": "^0.28.7",
     "firebase-admin": "^5.4.3",
     "firebase-tools": "^3.14.0",
     "mocha": "^4.0.1",
     "mocha-typescript": "^1.1.12",
     "npm-run-all": "^4.1.1",
     "nyc": "^11.2.1",
+    "postcss": "^6.0.14",
+    "postcss-cssnext": "^3.0.2",
+    "postcss-import": "^11.0.0",
+    "postcss-loader": "^2.0.8",
     "rimraf": "^2.6.2",
     "source-map-loader": "^0.2.3",
     "source-map-support": "^0.5.0",
+    "style-loader": "^0.19.0",
     "supertest": "^3.0.0",
     "tslint": "^5.8.0",
     "typescript": "^2.5.3",
+    "typings-for-css-modules-loader": "^1.7.0",
     "webpack": "^3.8.1",
     "webpack-dev-server": "^2.9.4"
   },
   "dependencies": {
     "@google-cloud/logging-winston": "^0.7.0",
     "bcrypt": "^1.0.3",
+    "classnames": "^2.2.5",
     "cors": "^2.8.4",
     "express": "^4.16.2",
     "firebase-admin": "^5.4.3",
