--- a/src/web/manifest.json
+++ b/src/web/manifest.json
@@ -3,6 +3,6 @@
   "short_name": "pifuxelck",
   "start_url": "/",
   "display": "standalone",
-  "background_color": "#fff",
-  "description": "drawing game!"
+  "background_color": "#CFD8DC",
+  "description": "A drawing game!"
 }
