--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
     "clean": "run-s _server-clean _web-clean",
     "_firebase-deploy": "firebase deploy",
     "deploy": "run-s _server-pre-deploy _web-pre-deploy _firebase-deploy",
-
     "_server-clean": "rimraf \"dist/*\"",
     "_server-build": "tsc",
     "_server-copy-package": "copyfiles package.json yarn.lock dist",
@@ -19,7 +18,6 @@
     "_server-install-deps": "yarn install --production=true --cwd dist",
     "_server-pre-deplpy": "run-s _server-clean _server-build _server-copy-package _server-install-deps",
     "server-deploy": "run-s _server-pre-deploy _server-firebase-deploy",
-
     "_web-clean": "rimraf \"dist-web/*\"",
     "_web-build": "webpack",
     "_web-copy-static": "copyfiles -u 1 'static/**/*' dist-web",
@@ -95,6 +93,7 @@
     "material-ui": "^1.0.0-beta.20",
     "material-ui-icons": "^1.0.0-beta.17",
     "mysql": "^2.15.0",
+    "offline-plugin": "^4.8.4",
     "on-finished": "^2.3.0",
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
