--- a/static/manifest.json
+++ b/static/manifest.json
@@ -4,5 +4,29 @@
   "start_url": "/",
   "display": "standalone",
   "background_color": "#CFD8DC",
-  "description": "A drawing game!"
+  "description": "A drawing game!",
+  "lang": "en-US",
+  "orientation": "portrait-primary",
+  "theme_color": "#3f51b5",
+  "icons": [{
+    "src": "images/icon-48.png",
+    "sizes": "48x48",
+    "type": "image/png"
+  }, {
+    "src": "images/icon-72.png",
+    "sizes": "72x72",
+    "type": "image/png"
+  }, {
+    "src": "images/icon-96.png",
+    "sizes": "96x96",
+    "type": "image/png"
+  }, {
+    "src": "images/icon-144.png",
+    "sizes": "144x144",
+    "type": "image/png"
+  }, {
+    "src": "images/icon-192.png",
+    "sizes": "192x192",
+    "type": "image/png"
+  }]
 }
