Start adding support for mailgun

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,8 +13,9 @@
         "./test/**/*"
     ],
     "files": [
-      "./types/sql-client.d.ts",
-      "./types/custom.d.ts"
+      "./types/custom.d.ts",
+      "./types/mailgun-js.d.ts",
+      "./types/sql-client.d.ts"
     ],
     "typeRoots": ["node_modules/@types"],
     "exclude": ["node_modules"]
