--- a/package.json
+++ b/package.json
@@ -90,6 +90,8 @@
     "firebase-functions": "^0.7.2",
     "history": "^4.7.2",
     "idb-keyval": "^2.3.0",
+    "mailcomposer": "^4.0.2",
+    "mailgun-js": "^0.13.1",
     "material-ui": "^1.0.0-beta.20",
     "material-ui-icons": "^1.0.0-beta.17",
     "mysql": "^2.15.0",
