--- a/package.json
+++ b/package.json
@@ -75,6 +75,7 @@
     "style-loader": "^0.19.0",
     "supertest": "^3.0.0",
     "tslint": "^5.8.0",
+    "tslint-react": "^3.2.0",
     "typescript": "^2.5.3",
     "typings-for-css-modules-loader": "^1.7.0",
     "webpack": "^3.8.1",
