Fix deployment issues that cropped up moving out of canary

--- a/firebase.json
+++ b/firebase.json
@@ -11,6 +11,9 @@
     ],
     "rewrites": [
       {
+        "source": "/api/**",
+        "function": "app"
+      }, {
         "source": "**",
         "destination": "/index.html"
       }
