--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "@types/on-finished": "^2.3.1",
     "@types/react": "^16.0.20",
     "@types/react-dom": "^16.0.2",
+    "@types/react-infinite": "^0.0.30",
     "@types/react-redux": "^5.0.12",
     "@types/react-responsive": "^3.0.0",
     "@types/react-router": "^4.0.16",
@@ -102,7 +103,9 @@
     "on-finished": "^2.3.0",
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
+    "react-infinite": "^0.12.1",
     "react-redux": "^5.0.6",
+    "react-resize-aware": "^2.7.0",
     "react-responsive": "^3.0.0",
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
