--- a/package.json
+++ b/package.json
@@ -102,6 +102,7 @@
     "offline-plugin": "^4.8.4",
     "on-finished": "^2.3.0",
     "react": "^16.0.0",
+    "react-delay": "^0.1.0",
     "react-dom": "^16.0.0",
     "react-infinite": "^0.12.1",
     "react-redux": "^5.0.6",
