Add a stats page
The stats page is implemented as a separate react app that is bundled
with the main app's JS binary. The stats end-point of the server returns
an HTML file with an in-lined payload that calls out the web app's stats
entry point.

--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "_server-firebase-deploy": "firebase deploy --only functions",
     "_server-install-deps": "yarn install --production=true --cwd dist",
     "_server-pre-deploy": "run-s _server-clean _server-build _server-copy-package _server-install-deps",
+    "_server-run-local": "node dist/src/server-local/index.js",
+    "server-local": "run-s _server-clean _server-build _server-run-local",
     "server-deploy": "run-s _server-pre-deploy _server-firebase-deploy",
     "_web-clean": "rimraf \"dist-web/*\"",
     "_web-build": "webpack",
@@ -49,6 +51,7 @@
     "@types/react-responsive": "^3.0.0",
     "@types/react-router": "^4.0.16",
     "@types/react-router-dom": "^4.2.0",
+    "@types/recharts": "^1.0.7",
     "@types/redux": "^3.6.0",
     "@types/redux-logger": "^3.0.5",
     "@types/redux-storage": "^4.0.10",
@@ -112,6 +115,7 @@
     "react-router-dom": "^4.2.2",
     "react-router-redux": "^5.0.0-alpha.8",
     "react-visibility-sensor": "^3.11.0",
+    "recharts": "^1.0.0-beta.6",
     "redux": "^3.7.2",
     "redux-logger": "^3.0.6",
     "redux-storage": "^4.1.2",
