--- a/firebase.json
+++ b/firebase.json
@@ -14,6 +14,9 @@
         "source": "/api/**",
         "function": "app"
       }, {
+        "source": "/stats",
+        "function": "app"
+      }, {
         "source": "**",
         "destination": "/index.html"
       }
