--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@types/cors": "^2.8.1",
     "@types/express": "^4.0.39",
     "@types/history": "^4.6.1",
+    "@types/mobile-detect": "^1.3.4",
     "@types/mocha": "^2.2.44",
     "@types/mysql": "^2.15.0",
     "@types/node": "^8.0.47",
@@ -101,6 +102,7 @@
     "mailgun-js": "^0.13.1",
     "material-ui": "^1.0.0-beta.20",
     "material-ui-icons": "^1.0.0-beta.17",
+    "mobile-detect": "^1.4.1",
     "mysql": "^2.15.0",
     "offline-plugin": "^4.8.4",
     "on-finished": "^2.3.0",
