--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@types/chai": "^4.0.4",
     "@types/chai-subset": "^1.3.1",
     "@types/classnames": "^2.2.3",
+    "@types/compression": "^0.0.35",
     "@types/cors": "^2.8.1",
     "@types/express": "^4.0.39",
     "@types/history": "^4.6.1",
@@ -92,6 +93,7 @@
     "@google-cloud/logging-winston": "^0.7.0",
     "bcrypt": "^1.0.3",
     "classnames": "^2.2.5",
+    "compression": "^1.7.1",
     "cors": "^2.8.4",
     "express": "^4.16.2",
     "firebase-admin": "^5.4.3",
