--- a/package.json
+++ b/package.json
@@ -91,6 +91,7 @@
   },
   "dependencies": {
     "@google-cloud/logging-winston": "^0.7.0",
+    "@google-cloud/trace-agent": "^2.4.1",
     "bcrypt": "^1.0.3",
     "classnames": "^2.2.5",
     "compression": "^1.7.1",
