--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@types/compression": "^0.0.35",
     "@types/cors": "^2.8.1",
     "@types/express": "^4.0.39",
+    "@types/file-saver": "^1.3.0",
     "@types/history": "^4.6.1",
     "@types/mobile-detect": "^1.3.4",
     "@types/mocha": "^2.2.44",
@@ -96,7 +97,9 @@
     "classnames": "^2.2.5",
     "compression": "^1.7.1",
     "cors": "^2.8.4",
+    "dom-to-image": "^2.6.0",
     "express": "^4.16.2",
+    "file-saver": "^1.3.3",
     "firebase-admin": "^5.4.3",
     "firebase-functions": "^0.7.2",
     "history": "^4.7.2",
