--- a/package.json
+++ b/package.json
@@ -67,27 +67,28 @@
     "chai": "^4.1.2",
     "chai-subset": "^1.6.0",
     "copyfiles": "^1.2.0",
-    "css-loader": "^0.28.7",
+    "css-loader": "^3.4.2",
     "firebase-admin": "^5.4.3",
     "firebase-tools": "^3.14.0",
     "mocha": "^4.0.1",
     "mocha-typescript": "^1.1.12",
     "npm-run-all": "^4.1.1",
     "nyc": "^11.2.1",
-    "postcss": "^6.0.14",
-    "postcss-cssnext": "^3.0.2",
-    "postcss-import": "^11.0.0",
-    "postcss-loader": "^2.0.8",
+    "postcss": "^7.0.26",
+    "postcss-cssnext": "^3.1.0",
+    "postcss-import": "^12.0.1",
+    "postcss-loader": "^3.0.0",
     "rimraf": "^2.6.2",
-    "source-map-loader": "^0.2.3",
-    "source-map-support": "^0.5.0",
-    "style-loader": "^0.19.0",
+    "source-map-loader": "^0.2.4",
+    "source-map-support": "^0.5.16",
+    "style-loader": "^1.1.2",
     "supertest": "^3.0.0",
     "tslint": "^5.8.0",
     "tslint-react": "^3.2.0",
-    "typescript": "^2.5.3",
+    "typescript": "2.6.1",
     "typings-for-css-modules-loader": "^1.7.0",
-    "webpack": "^3.8.1",
+    "webpack": "^4.41.5",
+    "webpack-cli": "^3.2.1",
     "webpack-dev-server": "^3.1.11"
   },
   "dependencies": {
@@ -110,7 +111,7 @@
     "material-ui-icons": "^1.0.0-beta.17",
     "mobile-detect": "^1.4.1",
     "mysql": "^2.15.0",
-    "offline-plugin": "^4.8.4",
+    "offline-plugin": "^5.0.7",
     "on-finished": "^2.3.0",
     "react": "^16.0.0",
     "react-delay": "^0.1.0",
