--- a/package.json
+++ b/package.json
@@ -69,7 +69,7 @@
     "copyfiles": "^1.2.0",
     "css-loader": "^3.4.2",
     "firebase-admin": "^5.4.3",
-    "firebase-tools": "^3.14.0",
+    "firebase-tools": "6.12",
     "mocha": "^4.0.1",
     "mocha-typescript": "^1.1.12",
     "npm-run-all": "^4.1.1",
