--- a/package.json
+++ b/package.json
@@ -32,109 +32,106 @@
     "web-deploy": "run-s _web-pre-deploy _web-firebase-deploy"
   },
   "devDependencies": {
-    "@google-cloud/functions-emulator": "^1.0.0-alpha.25",
-    "@types/bcrypt": "^1.0.0",
-    "@types/chai": "^4.0.4",
-    "@types/chai-subset": "^1.3.1",
+    "@types/bcrypt": "^3.0.0",
+    "@types/chai": "^4.2.10",
+    "@types/chai-subset": "^1.3.3",
     "@types/classnames": "^2.2.3",
-    "@types/compression": "^0.0.35",
+    "@types/compression": "^1.7.0",
     "@types/cors": "^2.8.1",
     "@types/express": "^4.0.39",
-    "@types/file-saver": "^1.3.0",
+    "@types/file-saver": "^2.0.1",
     "@types/history": "^4.6.1",
+    "@types/mailgun-js": "^0.22.4",
     "@types/mobile-detect": "^1.3.4",
-    "@types/mocha": "^2.2.44",
+    "@types/mocha": "^7.0.2",
     "@types/mysql": "^2.15.0",
-    "@types/node": "^8.0.47",
+    "@types/node": "^13.9.1",
     "@types/on-finished": "^2.3.1",
-    "@types/react": "^16.0.20",
-    "@types/react-dom": "^16.0.2",
-    "@types/react-infinite": "^0.0.30",
-    "@types/react-redux": "^5.0.12",
-    "@types/react-responsive": "^3.0.0",
-    "@types/react-router": "^4.0.16",
-    "@types/react-router-dom": "^4.2.0",
+    "@types/react": "^16.9.23",
+    "@types/react-dom": "^16.9.5",
+    "@types/react-infinite": "^0.0.34",
+    "@types/react-redux": "^7.1.7",
+    "@types/react-responsive": "^8.0.2",
+    "@types/react-router": "^5.1.4",
+    "@types/react-router-dom": "^5.1.3",
     "@types/recharts": "^1.0.7",
-    "@types/redux": "^3.6.0",
-    "@types/redux-logger": "^3.0.5",
-    "@types/redux-storage": "^4.0.10",
-    "@types/redux-thunk": "^2.1.0",
+    "@types/redux-logger": "^3.0.7",
+    "@types/redux-storage": "^4.1.0",
     "@types/shuffle-array": "^0.0.28",
     "@types/supertest": "^2.0.3",
-    "@types/uuid": "^3.4.3",
+    "@types/uuid": "^7.0.0",
     "@types/winston": "^2.3.7",
-    "awesome-typescript-loader": "^3.3.0",
-    "chai": "^4.1.2",
+    "awesome-typescript-loader": "^5.2.1",
+    "chai": "^4.2.0",
     "chai-subset": "^1.6.0",
-    "copyfiles": "^1.2.0",
+    "copyfiles": "^2.2.0",
     "css-loader": "^3.4.2",
-    "firebase-admin": "^5.4.3",
-    "firebase-tools": "^3.14.0",
-    "mocha": "^4.0.1",
+    "firebase-admin": "^8.10.0",
+    "firebase-tools": "^7.15.0",
+    "mocha": "^7.1.0",
     "mocha-typescript": "^1.1.12",
     "npm-run-all": "^4.1.1",
-    "nyc": "^11.2.1",
+    "nyc": "^15.0.0",
     "postcss": "^7.0.26",
     "postcss-cssnext": "^3.1.0",
     "postcss-import": "^12.0.1",
     "postcss-loader": "^3.0.0",
-    "rimraf": "^2.6.2",
+    "rimraf": "^3.0.2",
     "source-map-loader": "^0.2.4",
     "source-map-support": "^0.5.16",
     "style-loader": "^1.1.2",
-    "supertest": "^3.0.0",
-    "tslint": "^5.8.0",
-    "tslint-react": "^3.2.0",
-    "typescript": "2.6.1",
+    "supertest": "^4.0.2",
+    "tslint": "^6.1.0",
+    "tslint-react": "^4.2.0",
+    "typescript": "3.8.3",
     "typings-for-css-modules-loader": "^1.7.0",
     "webpack": "^4.41.5",
     "webpack-cli": "^3.2.1",
     "webpack-dev-server": "^3.1.11"
   },
   "dependencies": {
-    "@google-cloud/logging-winston": "^0.7.0",
-    "@google-cloud/trace-agent": "^2.4.1",
-    "bcrypt": "^1.0.3",
+    "@google-cloud/logging-winston": "^3.0.6",
+    "@google-cloud/trace-agent": "^4.2.5",
+    "@material-ui/core": "^4.9.5",
+    "@material-ui/icons": "^4.9.1",
+    "bcrypt": "^4.0.1",
     "classnames": "^2.2.5",
     "compression": "^1.7.1",
     "cors": "^2.8.4",
     "dom-to-image": "^2.6.0",
     "express": "^4.16.2",
-    "file-saver": "^1.3.3",
-    "firebase-admin": "^5.4.3",
-    "firebase-functions": "^0.7.2",
+    "file-saver": "^2.0.2",
+    "firebase-functions": "^3.3.0",
     "history": "^4.7.2",
-    "idb-keyval": "^2.3.0",
+    "idb-keyval": "^3.2.0",
     "mailcomposer": "^4.0.2",
-    "mailgun-js": "^0.13.1",
-    "material-ui": "^1.0.0-beta.20",
-    "material-ui-icons": "^1.0.0-beta.17",
+    "mailgun-js": "^0.22.0",
     "mobile-detect": "^1.4.1",
     "mysql": "^2.15.0",
     "offline-plugin": "^5.0.7",
     "on-finished": "^2.3.0",
-    "react": "^16.0.0",
+    "react": "^16.13.0",
     "react-delay": "^0.1.0",
-    "react-dom": "^16.0.1",
-    "react-infinite": "^0.12.1",
-    "react-redux": "^5.0.6",
-    "react-resize-aware": "^2.7.0",
-    "react-responsive": "^3.0.0",
-    "react-router": "^4.2.0",
-    "react-router-dom": "^4.2.2",
-    "react-router-redux": "^5.0.0-alpha.8",
-    "recharts": "^1.0.0-beta.6",
-    "redux": "^3.7.2",
+    "react-dom": "^16.13.0",
+    "react-infinite": "^0.13.0",
+    "react-redux": "^7.2.0",
+    "react-resize-aware": "^3.0.0",
+    "react-responsive": "^8.0.3",
+    "react-router": "^5.1.2",
+    "react-router-dom": "^5.1.2",
+    "react-router-redux": "^4.0.8",
+    "recharts": "^2.0.0-beta.2",
+    "redux": "^4.0.5",
     "redux-logger": "^3.0.6",
     "redux-storage": "^4.1.2",
     "redux-storage-decorator-debounce": "^1.1.3",
     "redux-storage-decorator-filter": "^1.1.8",
     "redux-storage-decorator-migrate": "^1.1.0",
-    "redux-storage-engine-indexed-db": "^0.0.4",
-    "redux-thunk": "^2.2.0",
+    "redux-storage-engine-indexed-db": "^1.0.0",
+    "redux-thunk": "^2.3.0",
     "shuffle-array": "^1.0.1",
-    "uuid": "^3.1.0",
-    "winston": "^2.4.0"
+    "uuid": "^7.0.2",
+    "winston": "^3.2.1"
   },
   "nyc": {
     "check-coverage": true,
