--- a/package.json
+++ b/package.json
@@ -97,6 +97,7 @@
     "bcrypt": "^4.0.1",
     "classnames": "^2.2.5",
     "compression": "^1.7.1",
+    "connected-react-router": "^6.7.0",
     "cors": "^2.8.4",
     "dom-to-image": "^2.6.0",
     "express": "^4.16.2",
@@ -119,7 +120,6 @@
     "react-responsive": "^8.0.3",
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
-    "react-router-redux": "^4.0.8",
     "recharts": "^2.0.0-beta.2",
     "redux": "^4.0.5",
     "redux-logger": "^3.0.6",
