--- a/package.json
+++ b/package.json
@@ -116,7 +116,7 @@
     "react-dom": "^16.13.0",
     "react-infinite": "^0.13.0",
     "react-redux": "^7.2.0",
-    "react-resize-aware": "^3.0.0",
+    "react-resize-aware": "2.7.2",
     "react-responsive": "^8.0.3",
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
