--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "css-loader": "^3.4.2",
     "firebase-admin": "^8.10.0",
     "firebase-tools": "^7.15.0",
+    "import-sort-style-module": "^6.0.0",
     "mocha": "^7.1.0",
     "mocha-typescript": "^1.1.12",
     "npm-run-all": "^4.1.1",
@@ -77,6 +78,7 @@
     "postcss-import": "^12.0.1",
     "postcss-loader": "^3.0.0",
     "prettier": "^1.19.1",
+    "prettier-plugin-import-sort": "^0.0.3",
     "rimraf": "^3.0.2",
     "source-map-loader": "^0.2.4",
     "source-map-support": "^0.5.16",
@@ -148,5 +150,11 @@
       "text-summary"
     ],
     "all": true
+  },
+  "importSort": {
+    ".js, .jsx, .ts, .tsx": {
+      "style": "module",
+      "parser": "typescript"
+    }
   }
 }
