--- a/package.json
+++ b/package.json
@@ -9,15 +9,17 @@
     "node": "10"
   },
   "scripts": {
-    "lint": "prettier --write '{src,test}/**/*.ts*'",
-    "fix": "prettier --write '{src,test}/**/*.ts*'",
+    "lint": "prettier --write '{src,test,bench}/**/*.ts*'",
+    "fix": "prettier --write '{src,test,bench}/**/*.ts*'",
     "test": "nyc mocha",
+    "bench": "run-s clean _server-build _server-bench",
     "pretest": "run-s clean _server-build",
     "clean": "run-s _server-clean _web-clean",
     "_firebase-deploy": "firebase deploy",
     "deploy": "run-s _server-pre-deploy _web-pre-deploy _firebase-deploy",
     "_server-clean": "rimraf \"dist/*\"",
     "_server-build": "tsc",
+    "_server-bench": "node dist/bench/index.js",
     "_server-copy-package": "copyfiles package.json yarn.lock dist",
     "_server-firebase-deploy": "firebase deploy --only functions",
     "_server-install-deps": "yarn install --production=true --cwd dist",
@@ -39,6 +41,7 @@
     "@types/chai": "^4.2.10",
     "@types/chai-subset": "^1.3.3",
     "@types/classnames": "^2.2.3",
+    "@types/cli-progress": "^3.4.2",
     "@types/compression": "^1.7.0",
     "@types/cors": "^2.8.1",
     "@types/express": "^4.0.39",
@@ -67,6 +70,7 @@
     "awesome-typescript-loader": "^5.2.1",
     "chai": "^4.2.0",
     "chai-subset": "^1.6.0",
+    "cli-progress": "^3.7.0",
     "copyfiles": "^2.2.0",
     "css-loader": "^3.4.2",
     "firebase-admin": "^8.10.0",
@@ -146,7 +150,8 @@
     ],
     "exclude": [
       "dist/src/index.js",
-      "dist/test/**/*.js"
+      "dist/test/**/*.js",
+      "dist/bench/**/*.js"
     ],
     "reporter": [
       "lcov",
