--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,7 +10,8 @@
     },
     "include": [
         "./src/**/*",
-        "./test/**/*"
+        "./test/**/*",
+        "./bench/**/*"
     ],
     "files": [
       "./types/custom.d.ts",
