Add some more realistic benchmarks
These new benchmarks rely on a snapshot of real user data. In order to
run a copy of the DB snapshot should be placed in backups/latest.sql.

--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "@types/recharts": "^1.0.7",
     "@types/redux-logger": "^3.0.7",
     "@types/redux-storage": "^4.1.0",
+    "@types/seedrandom": "^2.4.28",
     "@types/shuffle-array": "^0.0.28",
     "@types/supertest": "^2.0.3",
     "@types/uuid": "^7.0.0",
@@ -87,6 +88,7 @@
     "prettier": "^1.19.1",
     "prettier-plugin-import-sort": "^0.0.3",
     "rimraf": "^3.0.2",
+    "seedrandom": "^3.0.5",
     "source-map-loader": "^0.2.4",
     "source-map-support": "^0.5.16",
     "style-loader": "^1.1.2",
