--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "@types/chai-subset": "^1.3.3",
     "@types/classnames": "^2.2.3",
     "@types/cli-progress": "^3.4.2",
+    "@types/command-line-args": "^5.0.0",
     "@types/compression": "^1.7.0",
     "@types/cors": "^2.8.1",
     "@types/express": "^4.0.39",
@@ -72,6 +73,7 @@
     "chai": "^4.2.0",
     "chai-subset": "^1.6.0",
     "cli-progress": "^3.7.0",
+    "command-line-args": "^5.1.1",
     "copyfiles": "^2.2.0",
     "css-loader": "^3.4.2",
     "firebase-admin": "^8.10.0",
