--- a/package.json
+++ b/package.json
@@ -105,6 +105,7 @@
   },
   "dependencies": {
     "@google-cloud/logging-winston": "^3.0.6",
+    "@google-cloud/profiler": "^4.0.0",
     "@google-cloud/trace-agent": "^4.2.5",
     "@material-ui/core": "^4.9.5",
     "@material-ui/icons": "^4.9.1",
