Use everything endpoint
This appears to be consistently faster than the concurrent requests
approach where executing all requests would take up to 10 seconds. With
this the longest seems to be able two seconds.

--- a/package.json
+++ b/package.json
@@ -104,6 +104,7 @@
     "webpack-dev-server": "^3.1.11"
   },
   "dependencies": {
+    "@google-cloud/debug-agent": "^4.2.2",
     "@google-cloud/logging-winston": "^3.0.6",
     "@google-cloud/profiler": "^4.0.0",
     "@google-cloud/trace-agent": "^4.2.5",
