--- a/package.json
+++ b/package.json
@@ -48,7 +48,6 @@
     "@types/express": "^4.0.39",
     "@types/file-saver": "^2.0.1",
     "@types/history": "^4.6.1",
-    "@types/mailgun-js": "^0.22.4",
     "@types/mobile-detect": "^1.3.4",
     "@types/mocha": "^7.0.2",
     "@types/mysql": "^2.15.0",
@@ -121,8 +120,7 @@
     "firebase-functions": "^3.3.0",
     "history": "^4.7.2",
     "idb-keyval": "^3.2.0",
-    "mailcomposer": "^4.0.2",
-    "mailgun-js": "^0.22.0",
+    "mailgun.js": "^2.0.1",
     "mobile-detect": "^1.4.1",
     "mysql": "^2.15.0",
     "offline-plugin": "^5.0.7",
